--- a/html.html
+++ b/html.html
@@ -2,7 +2,6 @@
 
 <html>
 <body>
-    <a href="https://dragcave.net/view/9kAQp"><img src="https://dragcave.net/image/9kAQp.gif" style="border-width:0" alt="Dragon Cave: Adopt one today!" /></a>
-    <a href="https://dragcave.net/view/95DwD"><img src="https://dragcave.net/image/95DwD.gif" style="border-width:0" alt="Dragon Cave: Adopt one today!" /></a>
+    put html embed code here
 </body>
 </html>
